--- a/lead-news-gateway/pom.xml
+++ b/lead-news-gateway/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>fastjson2</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-util</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
