--- a/lead-news-basic/pom.xml
+++ b/lead-news-basic/pom.xml
@@ -27,12 +27,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
             <groupId>com.surge</groupId>
-            <artifactId>lead-news-model</artifactId>
-            <scope>provided</scope>
+            <artifactId>lead-news-common</artifactId>
         </dependency>
     </dependencies>
 
