添加阿里云文件服务

--- a/lead-news-basic/pom.xml
+++ b/lead-news-basic/pom.xml
@@ -25,13 +25,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>com.surge</groupId>
             <artifactId>lead-news-common</artifactId>
