--- a/lead-news-service/pom.xml
+++ b/lead-news-service/pom.xml
@@ -10,11 +10,65 @@
     </parent>
 
     <artifactId>lead-news-service</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>admin-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>surge-exception-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>surge-file-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-feign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-util</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
