--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <poi.version>5.2.5</poi.version>
         <jsoup.version>1.17.2</jsoup.version>
         <slf4j.version>2.0.12</slf4j.version>
+        <netty.version>4.1.109.Final</netty.version>
     </properties>
 
     <modules>
@@ -48,6 +49,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-resolver-dns-native-macos</artifactId>
+            <version>4.1.109.Final</version>
+            <scope>runtime</scope>
+            <classifier>osx-aarch_64</classifier>
         </dependency>
     </dependencies>
     <dependencyManagement>
