--- a/lead-news-service/pom.xml
+++ b/lead-news-service/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>admin-service</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
