--- a/lead-news-service/pom.xml
+++ b/lead-news-service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>admin-service</module>
         <module>user-service</module>
+        <module>media-service</module>
     </modules>
 
     <properties>
