修改用户审核逻辑

--- a/lead-news-feign/pom.xml
+++ b/lead-news-feign/pom.xml
@@ -17,4 +17,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-basic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.surge</groupId>
+            <artifactId>lead-news-model</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
