--- a/lead-news-service/article-service/pom.xml
+++ b/lead-news-service/article-service/pom.xml
@@ -9,8 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-service</artifactId>
-    <packaging>war</packaging>
+    <artifactId>article-service</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
