--- a/lead-news-service/pom.xml
+++ b/lead-news-service/pom.xml
@@ -15,6 +15,7 @@
         <module>admin-service</module>
         <module>user-service</module>
         <module>media-service</module>
+        <module>article-service</module>
     </modules>
 
     <properties>
